--- a/app/src/main/res/layout/activity_chat_random.xml
+++ b/app/src/main/res/layout/activity_chat_random.xml
@@ -55,7 +55,7 @@
         android:divider="@null"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_top"
+        app:layout_constraintTop_toBottomOf="@+id/btn_chat_like"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/input_layout"/>
