--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -11,7 +11,7 @@
             android:orientation="vertical">
             <include
                 android:id="@+id/appbar_layout"
-                layout="@layout/appbar_post" />
+                layout="@layout/appbar_home" />
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
