--- a/app/src/main/res/layouts/home/layout/fragment_home.xml
+++ b/app/src/main/res/layouts/home/layout/fragment_home.xml
@@ -34,7 +34,7 @@
                         android:clickable="true"
                         android:layout_width="0dp"
                         android:layout_weight="0.5"
-                        android:layout_height="match_parent"
+                        android:layout_height="0dp"
                         android:background="@drawable/shape_rectangle_border_radius_pink"
                         android:gravity="center"
                         android:orientation="vertical"
