--- a/app/src/main/res/layout/fragment_swipe_view.xml
+++ b/app/src/main/res/layout/fragment_swipe_view.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_dating"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -146,18 +147,6 @@
 
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/hasProfileTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/black"
-        android:text="Bạn chưa có tài khoản vui lòng tạo ở góc trên bên phải màn hình"
-        ></TextView>
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_view_users"
