--- a/app/src/main/res/layouts/home/layout/item_user.xml
+++ b/app/src/main/res/layouts/home/layout/item_user.xml
@@ -80,7 +80,7 @@
                     style="@style/bold_14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name"
+                    android:text=""
                     android:textColor="@color/text_primary"
                     android:textSize="14sp" />
 
@@ -152,7 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Hello" />
+                android:text="Bắt đầu cuộc trò chuyện ngay" />
 
         </LinearLayout>
     </LinearLayout>
