--- a/app/src/main/res/layout/fragment_dating_general_settings.xml
+++ b/app/src/main/res/layout/fragment_dating_general_settings.xml
@@ -66,6 +66,7 @@
         android:layout_height="0.5dp"
         app:layout_constraintTop_toBottomOf="@id/lt_add_images"/>
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_dating_settings_title_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,6 +80,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/space_1" />
     <com.example.fimae.components.ListTile
+        android:visibility="gone"
         android:id="@+id/lt_safe_tips"
     app:leadingIconVisibility="false"
     android:layout_width="match_parent"
@@ -89,6 +91,7 @@
     app:trailingIcon="@drawable/arrow_right"
     app:layout_constraintTop_toBottomOf="@id/tv_dating_settings_title_2" />
     <com.example.fimae.components.ListTile
+        android:visibility="gone"
         android:id="@+id/lt_help_center"
         app:leadingIconVisibility="false"
         android:layout_width="match_parent"
@@ -99,6 +102,7 @@
         app:trailingIcon="@drawable/arrow_right"
         app:layout_constraintTop_toBottomOf="@id/lt_safe_tips" />
     <com.example.fimae.components.ListTile
+        android:visibility="gone"
         android:id="@+id/lt_additional_terms"
         app:leadingIconVisibility="false"
         android:layout_width="match_parent"
