--- a/app/src/main/res/layout/activity_on_chat.xml
+++ b/app/src/main/res/layout/activity_on_chat.xml
@@ -79,6 +79,7 @@
 
         >
             <ImageView
+                android:visibility="gone"
                     android:layout_margin="14dp"
                     android:id="@+id/btn_micro"
                     android:layout_width="26dp"
