--- a/app/src/main/res/layout/fragment_swipe_view.xml
+++ b/app/src/main/res/layout/fragment_swipe_view.xml
@@ -14,7 +14,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
         android:elevation="4dp"
-        app:menu="@menu/chat_menu"
+        app:menu="@menu/dating_menu"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
