--- a/app/src/main/res/menu/dating_menu.xml
+++ b/app/src/main/res/menu/dating_menu.xml
@@ -4,7 +4,8 @@
 
     <item
         android:id="@+id/action_add_friend"
-        android:icon="@drawable/ic_user_add"
+        android:icon="@drawable/ic_article"
+        android:iconTint="@color/black"
         app:showAsAction="ifRoom" android:title="Edit dating profile"/>
 
 </menu>
