--- a/app/src/main/res/menu/chat_menu.xml
+++ b/app/src/main/res/menu/chat_menu.xml
@@ -4,6 +4,8 @@
     <item
             android:id="@+id/action_add_friend"
             android:icon="@drawable/ic_user_add"
+        android:visible="false"
+        android:enabled="false"
             app:showAsAction="ifRoom" android:title="Add chat"/>
 
 </menu>
