--- a/app/src/main/res/layout/detail_post.xml
+++ b/app/src/main/res/layout/detail_post.xml
@@ -310,6 +310,7 @@
                 >
 
                 <ImageView
+                    android:visibility="gone"
                     android:id="@+id/icon_emoji"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
@@ -320,6 +321,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
                 <ImageView
+                    android:visibility="gone"
                     android:id="@+id/icon_image"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
@@ -335,7 +337,7 @@
                     style="@style/medium_16"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginStart="90dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginEnd="80dp"
                     android:background="@drawable/add_comment_background"
                     android:gravity="center"
