--- a/app/src/main/res/layout/detail_post.xml
+++ b/app/src/main/res/layout/detail_post.xml
@@ -309,23 +309,23 @@
                 android:paddingVertical="5dp"
                 >
 
-                <ImageView
-                    android:id="@+id/icon_emoji"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginStart="14dp"
-                    android:src="@drawable/smile"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
+<!--                <ImageView-->
+<!--                    android:id="@+id/icon_emoji"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="0dp"-->
+<!--                    android:layout_marginStart="14dp"-->
+<!--                    android:src="@drawable/smile"-->
+<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    />-->
                 <ImageView
                     android:id="@+id/icon_image"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginLeft="17dp"
                     android:src="@drawable/ic_aplus"
-                    app:layout_constraintLeft_toRightOf="@id/icon_emoji"
+                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
@@ -335,7 +335,7 @@
                     style="@style/medium_16"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginStart="90dp"
+                    android:layout_marginStart="50dp"
                     android:layout_marginEnd="80dp"
                     android:background="@drawable/add_comment_background"
                     android:gravity="center"
