--- a/app/src/main/res/layout/activity_call_on_chat.xml
+++ b/app/src/main/res/layout/activity_call_on_chat.xml
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Test"
+        tools:text="Test"
         android:textColor="@color/text_white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
