--- a/app/src/main/res/layout/fragment_date_profile.xml
+++ b/app/src/main/res/layout/fragment_date_profile.xml
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_dating_profile_title_2"
         app:leadingIcon="@drawable/ic_date_location"
-        app:subtitle="Thành phố Hồ Chí Minh"
+        app:subtitle="Vị trí không có sẵn"
         app:title="Vị trí hẹn hò"
         app:trailingIconVisibility="false" />
 
